--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -26,8 +26,8 @@
 					<i class="fas fa-home"></i>
 				</a>
 				<a href="{{ path('app_about_page') }}">{{ 'about_us'|trans }}</a>
-				<a href="{{ path('contact_nous') }}">{{ 'contact'|trans }}</a>
-				<a href="{{ path('app_cadre_photo') }}">{{ 'photo_frame'|trans }}</a>
+				<a href="{{ path('contact_nous') }}">{{ 'contactH'|trans }}</a>
+				{# <a href="{{ path('app_cadre_photo') }}">{{ 'photo_frame'|trans }}</a> #}
 
 				{% if app.user %}
 					<li style="position: relative;">
